examples/simple/undefined/UB-CCV3-bad.output
Error: UB-CCV3
Description: Conversion to integer from float outside the range that can be represented.
Type: Undefined behavior.
See also: C11 sec. 6.3.1.4:1, J.2:1 item 17
  at main(UB-CCV3-bad.c:6)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
