examples/simple/undefined/UB-CCV3-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int main(void){
	signed char x;
	double y = 300;
	x = y;
	return 0;
}
